--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "discord.js": "^12.5.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql": "^15.4.0",
+    "graphql-request": "^3.3.0",
     "mongoose": "^5.10.15",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "request": "^2.88.2"
   }
