--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.10.15",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "slugify": "^1.4.6"
   }
 }
