--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^15.4.0",
     "graphql-request": "^3.3.0",
     "mongoose": "^5.10.15",
+    "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "request": "^2.88.2",
